--- a/mvc-mini-framework/composer.json
+++ b/mvc-mini-framework/composer.json
@@ -8,7 +8,11 @@
   ],
   "require": {
     "illuminate/database": "^12.1",
-    "symfony/http-foundation": "^7.2"
+    "symfony/http-foundation": "^7.2",
+    "symfony/http-kernel": "^7.2",
+    "symfony/routing": "^7.2",
+    "symfony/event-dispatcher": "^7.2",
+    "symfony/templating": "^6.4"
   },
   "autoload": {
     "files": [
