--- a/microservices/shopping/package.json
+++ b/microservices/shopping/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=dev nodemon src/index.js",
+    "start": "NODE_ENV=prod nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
